--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </a>
             </div>
         </section>
-        <img src="./assets/prof.png" alt="Foto Cleber Delgado Programandao" width="420px" height="420px">
+        <img class="apresentacao__imagem" src="./assets/profile.jpeg" alt="Foto Cleber Delgado Programandao" width="120px" height="220px">
 
     </main>   
         <footer class="rodape">
